<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#44000000"
        >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/catLimitEditor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cancelButton"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/enter_limit_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/catRateEditor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/catLimitEditor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/enter_rate_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/catRateEditor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/done"
            android:textAllCaps="false" />
    </RelativeLayout>

</RelativeLayout>